k8s/service.yml
kind: Service
apiVersion: v1

metadata:
  name: mymvcapp-svc
  namespace: mymvcapp-ns

spec:
  selector:
    app: mymvcapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
